# options-data-bot-001

./: .cursorignore  .env.example  .gitignore  COMMITS.md  CONTEXT.md  CONTEXT_NEXT.md  README.md  pyproject.toml  requirements.txt  run_collector.ps1  run_position_builder.ps1  run_ui.ps1
docs/: ARCHITECTURE_POSITION_BUILDER.md  RUN_POSITION_BUILDER.md
scripts/: check_tws_port.ps1
src/spx_options/: __init__.py  audit.py  collector.py  collector_main.py  config.py  security_log.py
src/spx_options/db/: __init__.py  connection.py  repository.py  schema.sql
src/spx_options/position/: __init__.py  builder_service.py  leg.py  pnl_curve.py  pricing.py
src/spx_options/suppliers/: __init__.py  base.py  ibkr.py
src/spx_options/ui/: __init__.py  connection_log.py  main.py  position_builder.py
tests/: __init__.py  test_builder_service.py  test_collector.py  test_gitignore.py  test_position_pricing.py  test_repository.py  test_suppliers.py
